--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -78,6 +78,31 @@
             android:name=".EditPermissionsActivity"
             android:label="@string/title_activity_edit_permissions" >
         </activity>
+        <activity
+            android:name=".FriendActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ViewFriends"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".MenuActivity"
+            android:label="@string/title_activity_menu" >
+        </activity>
+        <activity
+            android:name=".Notifications"
+            android:label="@string/title_activity_notifications" >
+        </activity>
+        <activity
+            android:name=".ViewNotification"
+            android:label="@string/title_activity_view_notification" >
+        </activity>
+        <activity
+            android:name=".MyCalendarActivity"
+            android:label="@string/my_Calendar_label">
+
+        </activity>
     </application>
 
 </manifest>
